@@ -12,6 +12,7 @@ master:
  - fix obspy version number check to also work with an obspy developer install
    (which has version numbers like '1.3.0.post0+76')
  - fix overview plot on newer matplotlib versions
+ - remove streams that make problems due to masked values and show a warning
 
 0.8.1
  - fix reading QuakeML after Python3 port (see #98)
